cabal-version:      2.4
name:               edMonad2
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: ed line editor in haskell

-- A longer description of the package.
-- description: ed

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Liam Zhu
maintainer:         liam.zhu@protonmail.com

-- A copyright notice.
-- copyright:
category: Text Editor
extra-source-files: CHANGELOG.md

executable edMonad2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: EdMonad

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0,
                      haskeline >= 0.8.2
    hs-source-dirs:   app
    default-language: Haskell2010